Changed the name of the project from 'angular-project001' to 'angular-project001-ComponentDemoApp'

--- a/AngularProject001/.project
+++ b/AngularProject001/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AngularProject001</name>
+	<name>angular-project001-ComponentDemoApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
